# LBM

./: .gitignore  CHANGELOG.md  README.md  TASK.md  pyproject.toml
configs/: default.yaml
docs/superpowers/plans/: 2026-07-07-lbm-prototype.md
docs/superpowers/specs/: 2026-07-07-lbm-prototype-design.md
src/lbm/data/: parse.py  sessions.py  tokenize.py  vocab.py
tests/: test_parse.py  test_sessions.py  test_tokenize.py  test_vocab.py
