[project]
name = "lbm"
version = "0.1.0"
description = "Large Behavioural Model research prototype"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "pyyaml>=6.0",
    "kaggle>=1.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lbm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
